Start mobile nav and header layout
Add mobile navigation and logo.
Add background image, header text and "carrot for harvest"

--- a/app/index.html
+++ b/app/index.html
@@ -7,12 +7,60 @@
     <title>Carrots!</title>
     <meta name="description" content="">
     <meta name="Author" content="Luke Tucker">
+    <link href="https://fonts.googleapis.com/css?family=Baloo|Baloo+Paaji|Baloo+Tamma" rel="stylesheet">
     <!-- build:css css/styles.min.css -->
   	<link rel="stylesheet" href="css/normalize.min.css">
   	<link rel="stylesheet" href="css/main.css" >
   	<!-- endbuild -->
   </head>
   <body>
+    <nav>
 
+  		<div class="nav-brand">
+  			<div class="container">
+  				<button class="navbar-toggle">
+  					<span class="toggle-bar top-bar"></span>
+  					<span class="toggle-bar middle-bar"></span>
+  					<span class="toggle-bar bottom-bar"></span>
+  				</button>
+  			</div><!-- container -->
+  		</div><!-- nav-brand -->
+
+  		<div class="navbar">
+  			<div class="container">
+  				<ul class="nav">
+  					<li><a href="#about" class="nav-link">About</a></li>
+  					<li><a href="#benefits" class="nav-link">Benefits</a></li>
+  					<li><a href="#types" class="nav-link">Types</a></li>
+  					<li><a href="#gallery" class="nav-link">Gallery</a></li>
+            <li><a href="#contact" class="nav-link">Contact</a></li>
+  				</ul>
+  			</div><!-- container -->
+  		</div><!-- nav -->
+
+  	</nav>
+
+    <header class="header">
+      <img class="carrot-logo" src="images/carrot-logo.svg" alt="Carrot logo">
+      <div class="header-content">
+        <h1>carrots</h1>
+        <h2>because who doesn't like carrots?</h2>
+        <img class="carrot-harvest" src="images/head-carrot.svg" alt="Carrot for harvest">
+      </div><!-- header content -->
+    </header>
+
+    <section id="about" class="about">
+      <div class="container">
+        <div class="about-content">
+
+
+
+        </div><!-- about content -->
+      </div><!-- container -->
+    </section><!-- about -->
+
+    <!--build:js js/main.min.js -->
+    <script src="js/build/main.js"></script>
+    <!-- endbuild -->
   </body>
 </html>
