About section content. 1st
Set container padding.
Add about title and ipsum.
Style about section text

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <title>Carrots!</title>
     <meta name="description" content="">
     <meta name="Author" content="Luke Tucker">
-    <link href="https://fonts.googleapis.com/css?family=Baloo|Baloo+Paaji|Baloo+Tamma" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cabin:500" rel="stylesheet">
     <!-- build:css css/styles.min.css -->
   	<link rel="stylesheet" href="css/normalize.min.css">
   	<link rel="stylesheet" href="css/main.css" >
@@ -53,7 +53,11 @@
       <div class="container">
         <div class="about-content">
 
+          <h3 class="about-title">About carrots</h3>
 
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc blandit ligula ac consequat bibendum. Aenean rutrum sodales vehicula. Nullam et interdum leo, in consectetur ante. Cras mattis feugiat fringilla. Morbi posuere non magna hendrerit viverra. Vestibulum faucibus ultricies lorem, eget efficitur quam posuere quis. Pellentesque vitae faucibus metus. Nullam vel augue et ex sagittis suscipit.</p>
+
+          <p>Nulla semper auctor enim, quis ornare lorem tristique sed. Nulla suscipit imperdiet nunc nec sodales. Vestibulum suscipit, augue ac efficitur sodales, nibh felis vulputate odio, eget pulvinar mauris est id augue. Ut quis nisl quis leo laoreet feugiat id in eros. Integer viverra dui eu sem efficitur scelerisque. Proin sollicitudin condimentum lorem a faucibus. Cras ut aliquam purus, vel aliquam sem. Sed id velit pellentesque, mattis metus ac, aliquet elit. Sed eget mattis diam. Donec gravida sed ligula et sollicitudin.</p>
 
         </div><!-- about content -->
       </div><!-- container -->
